[package]
name = "smbw-rolelinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["tokio-rustls"] }
tokio = { version = "1.33", features = ["rt-multi-thread", "macros", "signal"] }
twilight-util = { version = "0.15", features = ["builder"] }
twilight-validate = "0.15"
twilight-model = "0.15"
twilight-http = "0.15"
ed25519-dalek = "2"
serde_json = "1"
thiserror = "1"
axum = "0.6"
hex = "0.4"
