[package]
name = "smbw-rolelinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
twilight-util = { version = "0.15", features = ["builder"] }
serde = { version = "1", features = ["derive"] }
twilight-validate = "0.15"
twilight-model = "0.15"
twilight-http = "0.15"
ed25519-dalek = "2"
serde_json = "1"
dotenvy = "0.15"
thiserror = "1"
axum = "0.7"
hex = "0.4"
